welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:28: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (estFaceMur()) {
  ^SnakeBuggle:53: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return b
  ^